# bs2mqtt

./: .gitmodules  README.md  example.configuration.json  setup.cfg  update.sh
bs2mqtt/: __main__.py  abc.py  bisecure.py  config.py  consts.py
bs2mqtt/commands/: __init__.py  init.py  scan.py  serve.py
