[metadata]
name = bs2mqtt
version = attr: bs2mqtt.__version__
url = https://github.com/microweb/bs2mqtt
project_urls =
  GitHub: issues = https://github.com/microweb/bs2mqtt/issues
  GitHub: repo = https://github.com/microweb/bs2mqtt
description =
long_description = file: README.md
maintainer =
maintainer_email =
license = MIT
license_files = LICENSE.txt
classifiers =
  Development Status :: 5 - Production/Stable

  Framework :: AsyncIO

  Intended Audience :: Developers

  Operating System :: POSIX

  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10

  Topic :: Internet :: WWW/HTTP

[options]
python_requires = >=3.8
packages = find:

[options.packages.find]
exclude =
  pysecurce3

[options.entry_points]
console_scripts =
    bs3 = bs2mqtt.__main__:main

[flake8]
#ignore = N801,N802,N803,E203,E226,E305,W504,E252,E301,E302,E704,W503,W504,F811,D1,D4
max-line-length = 88

[isort]
line_length=88
include_trailing_comma=True
multi_line_output=3
force_grid_wrap=0
combine_as_imports=True

[report]
exclude_lines =
    @abc.abstractmethod
    @abstractmethod
minversion = 3.8.2
